--- a/2.Arrays.md
+++ b/2.Arrays.md
@@ -6,7 +6,7 @@ Is a group of elements stored together at contiguous memory locations and each c
 var users=["neha","ayushi","gauri"];  // creating an array  
 ```
 
-In arrays, You know the address for every item in your array that is whay arrays are great if you want to read random elements, because you can look up any element in your array instantly. "O(1)"
+In arrays, You know the address for every item in your array, that is whay arrays are great if you want to read random elements, because you can look up any element in your array instantly. "O(1)"
 
 Inserting elements to an array and deleting elements from an array cannot be done straight away as arrays are fixed in size "everything needs to be moved up to antoher space location every time you delete or add an element". "O(n)"
 
