added grapsh and hashTables

--- a/2.Arrays.md
+++ b/2.Arrays.md
@@ -6,14 +6,13 @@ Is a group of elements stored together at contiguous memory locations and each c
 var users=["neha","ayushi","gauri"];  // creating an array  
 ```
 
-In arrays, You know the address for every item in your array, that is whay arrays are great if you want to read random elements, because you can look up any element in your array instantly. "O(1)"
+In arrays, you know the address for every item in your array, that is whay arrays are great if you want to read random elements, because you can look up any element in your array instantly. In other words, access by index to any element of the array is constant, that is, it always takes the same time. "O(1)"
 
-Inserting elements to an array and deleting elements from an array cannot be done straight away as arrays are fixed in size "everything needs to be moved up to antoher space location every time you delete or add an element". "O(n)"
+In order to store all the elements in an array contiguously, the machine have to look for a memory space big enough so every data can fix. That is whay inserting elements to an array and deleting elements from an array cannot be done straight away "everything needs to be moved up to antoher space location every time you delete or add an element". linear cost "O(n)".
 
 Unlike insertions, deletions will always work. Insertions can fail sometimes when there’s no space left in memory. But you can always delete an element.
 
 ## Applications of arrays
 
 - Used as the building blocks to build other data structures such as array lists, heaps, hash tables, vectors and matrices.
-
 - Used for different sorting algorithms such as insertion sort, quick sort, bubble sort and merge sort.
