join stack and queues

--- a/7.Grapsh.md
+++ b/7.Grapsh.md
@@ -1,6 +1,10 @@
 # Graphs
 
-A graph is a complex data structure consists of a finite set of nodes and edges. A graph can be seen more like a network. The interconnected objects are represented by points known as vertices, and the links that connect the vertices are called edges. A vertex is just similar to the linked list nodes and the pair (x,y) referred as an edge which means that the x vertex connects to the y vertex.
+A graph is a complex data structure consists of:
+- a finite set of vertices also called as nodes
+- a finite set of ordered pair of the form (u, v) called as edge. 
+
+A graph can be seen more like a network. The interconnected objects are represented by points known as vertices, and the links that connect the vertices are called edges. A vertex is just similar to the linked list nodes and the pair (x,y) referred as an edge which means that the x vertex connects to the y vertex.
 
 There are two common types of graphs:
 
@@ -11,7 +15,7 @@ There are two common types of graphs:
 
 The graphs can be represented in two ways:
 
-- **adjacency matrix:** are very good when we want to obtain in a very fast way the conectivity of 2 nodes.
+- **adjacency matrix:** Adjacency Matrix is a 2D array of size V x V where V is the number of vertices in a graph. are very good when we want to obtain in a very fast way the conectivity of 2 nodes.
 - **adjacency list:** very common when the number of vertix is biger  than the number of edges.
 
 ## Graph traversal
