--- a/3.LinkedList.md
+++ b/3.LinkedList.md
@@ -1,8 +1,23 @@
 # Linked List
 
+Unlike an array, a linked list does not provide constant time access to a particular "index" within the list.
+This means that if you'd like to find the Kth element in the list, you will need to iterate through K elements.
+The benefit of a linked list is that you can add and remove items from the beginning of the list in constant
+time. For specific applications, this can be useful. 
+
 Linked list is a linear data structure in which elements are not in contiguous memory locations like arrays. It consists of a group of nodes and each node has its own data and address to the next node. In an array, the elements are indexed and you can instantly get to an element but in a linked list, you have to start with the head and work your way through until you get to the desired element.
 
 The advantage of the linked list is that the insertion and deletion in linked list are easier than array, as the elements in an array are stored in a consecutive location so linked list have insertion and deletion in constant time O(1). Also, its memory consumption is efficient as the size of the linked list can grow or shrink according to our requirements.
 
 but linke list have lienar acces to a data O(n)
+# Main operations
 
+- add(value)         -> Add a node in the end.
+- addHead(value)        -> Add a node in the beginning.
+- pop()                 -> Remove a node from the end.
+- popFirst()            -> Remove a node from the beginning.
+- getFirst()            -> Return the first node.
+- getLast()             -> Return the last node.
+- removeAt(Node)*       -> Remove Node at specific point from the list.
+- insertAt(Node)        -> Insert Node at specific point from the list.
+- _toArray              -> Combert linked list values into array.
