--- a/4.StackQueues.md
+++ b/4.StackQueues.md
@@ -2,6 +2,8 @@
 
 Stack is a linear data structure that follows the LIFO(Last In First Out) or FILO(First In Last Out) principle. It contains only one pointer the top pointer that points to the topmost element of the stack. Whenever we add an element to the stack, it is added at the top of the stack and also whenever we delete an element from the stack it is deleted from the top of the stack.
 
+Unlike an array, a stack does not offer constant-time access to the ith item. However, it does allow constanttime adds and removes, as it doesn't require shifting elements around. 
+
 ## Stack operations
 
 - Push: Insert an element on to the top of the stack.
@@ -13,7 +15,7 @@ Stack is a linear data structure that follows the LIFO(Last In First Out) or FIL
 ## Applications of stacks
 
 - Used for expression evaluation (e.g.: shunting-yard algorithm for parsing and evaluating mathematical expressions).
-- Used to implement function calls in recursion programming.
+- Used to implement function calls in recursion programming. 
 
 # Queues
 
